--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ notify = "6.0.1"
 once_cell = "1.18.0"
 png = "0.17.10"
 pretty_env_logger = "0.5.0"
+rbx_cookie = "0.1.4"
 rbxcloud = "0.6.1"
 regex = "1.9.1"
 reqwest = { version = "0.11.18", features = ["gzip"] }
@@ -37,6 +38,7 @@ thiserror = "1.0.43"
 tokio = { version = "1.29.1", features = ["macros", "rt", "fs", "sync", "signal", "time"] }
 toml = "0.7.6"
 unicode-ident = "1.0.10"
+serde_json = "1.0.102"
 
 [target.'cfg(windows)'.dependencies]
 junction = "1.0.0"
