--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ tokio = { version = "1.29.1", features = ["macros", "rt", "fs", "sync", "signal"
 toml = "0.7.6"
 unicode-ident = "1.0.10"
 serde_json = "1.0.102"
+futures-retry = "0.6.0"
 
 [target.'cfg(windows)'.dependencies]
 junction = "1.0.0"
